# hicc

./: .editorconfig  .gitignore  .version.cmake  CMakeLists.txt  README.md  build.sh
.github/: FUNDING.yml
.github/workflows/: cmake.yml
ci/homebrew/: hicc-cxx.rb
cmake/: config-base.h.in  install-pack-helpers.cmake  options-def.cmake  package-deb.cmake  package-dmg.cmake  prerequisites.cmake  utils.cmake  version.h.in  versions-gen.cmake
docs/: CMakeLists.txt  README.md
include/: core11.hh
include/hicc/: hicc.hh  hz-defs.hh
libs/hicc/: CMakeLists.txt
libs/hicc/cmake/: hiccConfig.cmake
libs/hicc/include/: hicc-cxx.hh
libs/hicc/include/hicc/: hicc.hh  hz-btree.hh  hz-chrono.hh  hz-common.hh  hz-dbg.hh  hz-defs.hh  hz-if.hh  hz-ios.hh  hz-log.hh  hz-mmap.hh  hz-os-io-redirect.hh  hz-path.hh  hz-pipeable.hh  hz-pool.hh  hz-priority-queue.hh  hz-process.hh  hz-ringbuf.hh  hz-string.hh  hz-terminal.hh  hz-ticker.hh  hz-util.hh  hz-x-class.hh  hz-x-test.hh
libs/hicc/src/: main.cc
src/: CMakeLists.txt  cmdr_main.cc  main.cc
src/tests/: CMakeLists.txt  main.cxx
tests/: CMakeLists.txt  awesome-enum.cc  bt0.cc  btree.cc  cache-line.cc  chrono.cc  copy-elision.cc  dp-builder.cc  dp-factory.cc  dp-flyweight.cc  dp-memento.cc  dp-memento.puml  dp-observer.cc  dp-rx.cc  dp-slot.cc  dp-state.cc  dp-strategy.cc  dp-visitor.cc  drawing.cc  drawing.hh  factory.cc  mmap.cc  native-handle.cc  path.cc  piper.cc  pool.cc  priority-queue.cc  process.cc  read-write-lock.cc  ringbuf.cc  sso-2.cc  ticker.cc  tiny-socket-cli.cc  tiny-socket-svr.cc  typename.cc
